syntax = "proto3";

message calib_param{
    optional float gain = 1;
    optional float offset = 2;
}